# mailie

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: python-test.yml  test.yml
commandline/: index.html
docs/: email.md  index.md
dsl/: index.html
email/: index.html
mailie/: __init__.py  _argv.py  _attachments.py  _auth.py  _client.py  _configuration.py  _constants.py  _decorators.py  _dispatching.py  _email.py  _errors.py  _exceptions.py  _header.py  _policy.py  _providers.py  _request.py  _response.py  _senders.py  _types.py  _utility.py  commandline.py  mailie.py
mailie/commandline/: cli.py
scripts/: clean_workspace.sh
search/: search_index.json
tests/: conftest.py  test_boilerplate.py
tests/cli/: conftest.py  test_header.py  test_help.py  test_recipient.py  test_recipients.py  test_version.py
tests/commandline/: conftest.py  test_version.py
tests/core/: conftest.py
tests/core/integration/: conftest.py  server.py  test_mail_rendering.py  test_mail_sending.py  test_mail_sending_async.py  test_mail_sending_sync.py  test_sendmessage.py
tests/core/unit/: test_attachments.py  test_headers.py  test_structures.py  test_utility.py
tests/dsl/: conftest.py
tests/dsl/integration/: conftest.py  server.py  test_mail_sending.py
tests/dsl/unit/: test_attachments.py  test_structures.py  test_utility.py
