[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mailie"
version = "0.1.1"
description = "A Python email DSL and CLI with asynchronous sending capabilities."
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.rst"

[tool.poetry.scripts]
mailie = "mailie.commandline.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
codecov = "^2.1.12"
ipython = "^8.4.0"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.7"
Pillow = "^9.1.1"
pytest-asyncio = "^0.18.3"
poetryup = "^0.7.2"
aiosmtplib = "^1.1.6"
tox = "^3.25.0"
coverage = "^6.4.1"
mkdocstrings = {version = "^0.19.0", extras = ["python"]}
pytest-mock = "^3.7.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120
force_single_line = 'True'
known_first_party = 'mailie'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
skip = '.tox,.eggs,ci/templates'

[tool.mypy]
mypy_path = 'mailie'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
ignore_missing_imports = 'False'
show_error_codes = 'True'
strict_equality = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'False'
warn_unreachable = 'True'
warn_unused_configs = 'True'
no_implicit_reexport = 'False'
ignore_errors = 'False'

[tool.black]
target-version = ['py38']
line-length = 120

[tool.flake8]
# flake8 does not currently support pyproject.toml (handle via pre-commit directly).
