[metadata]
name = mailie
version = 0.0.1
description = Python DSL and CLI for emails.
author = Simon Kerr
author_email = jackofspaces@gmail.com
license = Apache License 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = testing, email
project_urls =
    Documentation = https://mailie.readthedocs.io/
    Changelog = https://mailie.readthedocs.io/en/latest/changelog.html
    Tracker = https://github.com/symonk/mailie/issues

[options]
packages = mailie
install_requires =
python_requires = >=3.8
setup_requires =
    setuptools>=54.2.0
    setuptools-scm==6.3.2
zip_safe = no

[options.entry_points]
console_scripts =
    mailie=mailie.mailie:main

[options.extras_require]
tests =
        pytest==6.2.5
        codecov==2.1.12
        ipython==7.30.0
        pre-commit==2.15.0

[bdist_wheel]
universal = 1

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
force_single_line = True
known_first_party = mailie
default_section = THIRDPARTY
forced_separate = tests
skip = .tox,.eggs,ci/templates,

[mypy]
mypy_path = mailie
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = False
ignore_errors = False

[flake8]
max-line-length = 120
exclude = .tox,.eggs,ci/templates
